Prompt editable. L0, L1 process editable.
